/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "GreenEnergyHub.PostOffice.Communicator.Contracts";

message DataAvailableNotificationContract {
    string UUID = 1; // Unique dataset identification
    string recipient = 2; // Dataset recipient
    string messageType = 3; // Dataset message type
    string origin = 4; // Identification for where the dataset can be queried
    bool supportsBundling = 5; // Is the message capable of being bundled with similar messages
    int32 relativeWeight = 6; // The relative weight of the dataset
}